# IDPLab-ADP

./: .gitignore  README.md
src/Control/: readme.txt
src/Localization/: KUSV_offline_route_generation.py  readme.txt
src/Perception/: readme.txt
src/Planning/: readme.txt
src/Planning/can_tx_subscriber/: CMakeLists.txt  package.xml
src/Planning/can_tx_subscriber/msg/: Foward.msg
src/Planning/can_tx_subscriber/src/: can_tx_subscriber.cpp
src/Planning/simulator/devel/: .catkin  .rosinstall
src/Planning/simulator/devel/include/autonomous_msg/: Control.h
src/Planning/simulator/devel/include/kusv_msgs/: DetectedObject.h  DetectedObjectArray.h  DrivingMode.h  State.h  Waypoint.h  WaypointArray.h
src/Planning/simulator/devel/lib/final_autonomous_driving/: autonomous_driving
src/Planning/simulator/devel/lib/final_simulator/: sim_display  sim_vehicle
src/Planning/simulator/devel/lib/pkgconfig/: autonomous_msg.pc  final_autonomous_driving.pc  final_simulator.pc  kusv_msgs.pc
src/Planning/simulator/shellScript/: simlaunch.sh
src/Planning/simulator/src/autonomous_msg/: CMakeLists.txt
src/Planning/simulator/src/autonomous_msg/msg/: Control.msg
src/Planning/simulator/src/final_autonomous_driving/: CMakeLists.txt
src/Planning/simulator/src/final_autonomous_driving/scripts/: cmd_input.py
src/Planning/simulator/src/final_autonomous_driving/src/: autonomous_driving.cpp
src/Planning/simulator/src/final_simulator/: CMakeLists.txt  package.xml
src/Planning/simulator/src/final_simulator/csv/: A_1.csv
src/Planning/simulator/src/kusv_msgs/: CMakeLists.txt
(+59 files in other folders)
